# voda

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.circleci/: Dockerfile.android  Dockerfile.linux  config.yml  continue-config.yml
.github/: Dockerfile
.github/workflows/: Dockerfile  build.yml  build_android.yml  build_linux.yml  docker-image.yml  github-actions.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/publisher/: build.gradle
android/src/subscriber/src/main/cpp/: CMakeLists.txt  MainActivityBinding.h  Subscriber.cpp  Subscriber.h  gstreamer_android-1.0.c  subscriber_binding.cpp  surface_holder_binding.cpp
android/subscriber/: Cargo.toml  build.gradle
android/subscriber/src/: lib.rs
android/subscriber/src/main/: AndroidManifest.xml
android/subscriber/src/main/java/com/s2e_systems/: MainActivity.java
android/subscriber/src/main/res/layout/: activity_main.xml
android/subscriber/src/main/res/mipmap-anydpi-v26/: subscriber_launcher.xml
cmake/: FindGLib.cmake  FindGStreamer.cmake
documentation/: android-install.txt  android-tap.txt  publisherpipeline.graphml
projects/: CMakeLists.txt  VideoDDS.pro
projects/Common/: cameracapabilities.cpp  cameracapabilities.h  ddsidl.pri  elements.h  gstreamer.pri  opensplice.pri  pipeline.cpp  pipeline.h  qtgstreamer.cpp  qtgstreamer.h  videowidget.cpp  videowidget.h  videowidgetgles2.cpp  videowidgetgles2.h  videowidgetgles3.cpp  videowidgetgles3.h  videowidgetgst.cpp  videowidgetgst.h  videowidgetpaintergst.cpp  videowidgetpaintergst.h
projects/Common/cmakemodules/: FindGStreamer.cmake  FindOSPL.cmake
projects/Tests/openglwidget/: main.cpp  openglwidget.pro  testvideowidget.cpp  testvideowidget.h
projects/UnitTest/: mainrecorder.cpp  mainunittests.cpp
projects/UnitTest/data/raspbian_gst1_14_2/: avenc_h264_omx00000.h264
projects/UnitTests/: CMakeLists.txt  automatictests.cpp  config.h.in  mainmanualtests.cpp  mainrecorder.cpp  manualtests.cpp  manualtests.h
projects/UnitTests/data/raspbian_gst1_14_2/: avenc_h264_omx00001.h264  avenc_h264_omx00002.h264  avenc_h264_omx00003.h264  avenc_h264_omx00004.h264  avenc_h264_omx00006.h264
projects/UnitTests/data/ubuntu_gst1_15_9/: x264enc00000.h264  x264enc00004.h264  x264enc00005.h264
projects/UnitTests/data/windows_gst1_16_0/: x264enc00000.h264  x264enc00001.h264  x264enc00002.h264  x264enc00004.h264  x264enc00005.h264
projects/VideoDDSPublisher/: CMakeLists.txt  VideoDDSPublisher.pro  main.cpp  pipelinedds.cpp  pipelinedds.h  videoddspublisher.cpp  videoddspublisher.h
projects/VideoDDSSubscriber/: CMakeLists.txt  VideoDDSSubscriber.pro  main.cpp  videoddssubscriber.cpp  videoddssubscriber.h  videolistener.cpp  videolistener.h
projects/android-publisher/app/: build.gradle
projects/android-publisher/app/src/main/: AndroidManifest.xml
projects/android-publisher/app/src/main/cpp/: CMakeLists.txt  VideoDDS.cpp  VideoDDS.hpp  native-dds-lib.cpp  native-lib.cpp
projects/android-publisher/app/src/main/java/gstreamer/: GStreamer.java
projects/android-publisher/app/src/main/java/mainactivity/: MainActivity.java
projects/android-publisher/app/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
projects/android-publisher/app/src/main/res/values/: strings.xml
projects/android-publisher/app/src/main/res/values-night/: themes.xml
projects/android-publisher/gradle/wrapper/: gradle-wrapper.properties
projects/android-subscriber/: CMakeLists.txt  VideoDDS.cpp  local.properties  main.cpp
projects/android-subscriber/app/src/main/: AndroidManifest.xml
projects/android-subscriber/app/src/main/cpp/: CMakeLists.txt  VideoDDS.hpp  native-lib.cpp
projects/android-subscriber/app/src/main/java/mainactivity/: MainActivity.java
projects/android-subscriber/app/src/main/java/org/freedesktop/gstreamer/: GStreamerSurfaceView.java
projects/android-subscriber/app/src/main/res/layout/: activity_main.xml
projects/cmake/: FindGLib.cmake  FindGStreamer.cmake  FindOpenSplice.cmake
projects/common/: cameracapabilities_tests.cpp  elements.cpp  elements_tests.cpp  qtgstreamer.cpp  qtgstreamer.h  videowidgetpaintergst.h
projects/publisher/: main.cpp  videoddspublisher.cpp  videoddspublisher.h
projects/subscriber/: main.cpp  videoddssubscriber.cpp  videoddssubscriber.h  videoddssubscriber_tests.cpp  videolistener.cpp  videolistener.h
projects/unit_test/: mainrecorder.cpp  mainunittests.cpp
projects/unit_test/data/: 00000_RGBA_w112_h32.raw  00001_RGBA_w112_h32.raw  00004_RGBA_w112_h32.raw  00006_RGBA_w112_h32.raw  00009_RGBA_w112_h32.raw  ref00000.rgba.raw  ref00001.rgba.raw  ref00002.rgba.raw  ref00003.rgba.raw  ref00004.rgba.raw  ref00005.rgba.raw  ref00006.rgba.raw  ref00007.rgba.raw  ref00008.rgba.raw  ref00009.rgba.raw
projects/unit_test/data/raspbian_gst1_14_2/: avenc_h264_omx00007.h264
projects/unit_test/data/raspbian_gst1_14_2/avenc_h264_omx/: 00005.h264
projects/unit_test/data/raspbian_gst1_18/v4l2h264enc/: 00000.h264  00001.h264  00005.h264  00008.h264  pipeline_graph.dot
projects/unit_test/data/raspbian_gst1_18/x264enc/: 00003.h264  00008.h264
projects/unit_test/data/ubuntu_gst1_16/x264enc/: 00006.h264  pipeline_graph.dot
projects/unit_test/data/ubuntu_gst1_16_2/x264enc/: 00000.h264  00001.h264  00002.h264  00003.h264  00004.h264  00006.h264  00007.h264  00008.h264  pipeline_graph.dot
projects/unit_test/data/windows_gst1_16_0/: x264enc00003.h264  x264enc00006.h264  x264enc00007.h264
projects/unit_test/data/windows_gst1_18/openh264enc/: 00009.h264
projects/unit_test/data/windows_gst1_18/x264enc/: 00000.h264  00007.h264  00009.h264  pipeline_graph.dot
projects/unit_test/data/windows_gst1_18_5/openh264enc/: 00000.h264  00001.h264  00002.h264  00003.h264  00004.h264  00005.h264  00006.h264  00007.h264  00008.h264  00009.h264  pipeline_graph.dot
projects/unit_test/data/windows_gst1_18_5/x264enc/: 00000.h264  00005.h264  00009.h264  pipeline_graph.dot
src/: main_publisher.rs  main_subscriber.rs
src/android-publisher/: build.gradle
unit_test/: mainrecorder.cpp
(+88 files in other folders)
